--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Dropbox</title>
 </head>
 <body>
+
+    <!-- Header -->
+    <header></header>
+    <!-- /Header -->
+
+    <!-- Main -->
+    <main></main>
+    <!-- /Main -->
+
+    <!-- Footer -->
+    <footer></footer>
+    <!-- /Footer -->
     
 </body>
 </html>
