Add structure of header-top

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -20,7 +20,30 @@
 <body>
 
     <!-- Header -->
-    <header></header>
+    <header>
+        <!-- Header Top -->
+        <div class="header-top flex">
+            <div class="header-left flex">
+                <!-- Logo Header -->
+                <nav class="header-logo"></nav>
+                <!-- /Logo Header -->
+
+                <!-- Link Header -->
+                <nav class="header-link"></nav>
+                <!-- /Link Header -->
+            </div>
+            <div class="header-right flex">
+                <!-- Link Header -->
+                <nav class="header-link"></nav>
+                <!-- /Link Header -->
+            </div>
+        </div>
+        <!-- /Header Top -->
+
+        <!-- Header Bottom -->
+        <div class="header-bottom"></div>
+        <!-- /Header Bottom -->
+    </header>
     <!-- /Header -->
 
     <!-- Main -->
