Add structure of jumbotron

--- a/index.html
+++ b/index.html
@@ -41,7 +41,22 @@
         <!-- /Header Top -->
 
         <!-- Header Bottom -->
-        <div class="header-bottom"></div>
+        <div class="header-bottom">
+            <!-- Container Jumbotron-->
+            <div class="jumbotron big-container">
+                <!-- Jumbo Top -->
+                <div class="jumbo-top"></div>
+                <!-- /Jumbo Top -->
+
+                <!-- Jumbo Bottom -->
+                <div class="jumbo-bottom flex">
+                    <div class="jumbo-text"></div>
+                    <div class="jumbo-photo"></div>
+                </div>
+                <!-- /Jumbo Bottom -->
+            </div>
+            <!-- /Container Jumbotron-->
+        </div>
         <!-- /Header Bottom -->
     </header>
     <!-- /Header -->
