Add section structure of business plan

--- a/index.html
+++ b/index.html
@@ -62,7 +62,42 @@
     <!-- /Header -->
 
     <!-- Main -->
-    <main></main>
+    <main>
+        <!-- Section Piani business -->
+        <section>
+            <div class="business-plan small-container mg-t mg-b">
+                <div class="section-top"></div>
+                <div class="section-content flex">
+                    <div class="col">
+                        <div class="top-col">Top</div>
+                        <div class="bottom-col">Bottom</div>
+                    </div>
+                    <div class="col">
+                        <div class="top-col">Top</div>
+                        <div class="bottom-col">Bottom</div>
+                    </div>
+                    <div class="col">
+                        <div class="top-col">Top</div>
+                        <div class="bottom-col">Bottom</div>
+                    </div>
+                </div>
+                <div class="section-footer"></div>
+            </div>
+        </section>
+        <!-- /Section Piani business -->
+
+        <!-- Section -->
+        <!-- /Section -->
+
+        <!-- Section -->
+        <!-- /Section -->
+
+        <!-- Section Pubblicity -->
+        <!-- /Section Pubblicity -->
+
+        <!-- Section Domande -->
+        <!-- /Section Domande -->
+    </main>
     <!-- /Main -->
 
     <!-- Footer -->
