--- a/index.html
+++ b/index.html
@@ -66,31 +66,53 @@
         <!-- Section Piani business -->
         <section>
             <div class="business-plan small-container mg-t mg-b">
+                <!-- Section Top -->
                 <div class="section-top"></div>
+                <!-- /Section Top -->
+
+                <!-- Section Content -->
                 <div class="section-content flex">
+                    <!-- Column Of business Plan -->
                     <div class="col">
                         <div class="top-col">Top</div>
                         <div class="bottom-col">Bottom</div>
                     </div>
+                    <!-- /Column Of business Plan -->
+
+                    <!-- Column Of business Plan -->
                     <div class="col">
                         <div class="top-col">Top</div>
                         <div class="bottom-col">Bottom</div>
                     </div>
+                    <!-- /Column Of business Plan -->
+                    
+                    <!-- Column Of business Plan -->
                     <div class="col">
                         <div class="top-col">Top</div>
                         <div class="bottom-col">Bottom</div>
                     </div>
+                    <!-- /Column Of business Plan -->
                 </div>
+                <!-- /Section Content -->
+
+                <!-- Section Footer -->
                 <div class="section-footer"></div>
+                <!-- /Section Footer -->
             </div>
         </section>
         <!-- /Section Piani business -->
 
-        <!-- Section -->
-        <!-- /Section -->
+        <!-- Section Photo with text-->
+        <section>
+            <div class="section-photo small-container flex mg-b">
+                <div class="photo"></div>
+                <div class="text"></div>
+            </div>
+        </section>
+        <!-- /Section Photo with text-->
 
-        <!-- Section -->
-        <!-- /Section -->
+        <!-- Section Grid photo-->
+        <!-- /Section Grid photo-->
 
         <!-- Section Pubblicity -->
         <!-- /Section Pubblicity -->
