Add section with grid photo

--- a/index.html
+++ b/index.html
@@ -112,6 +112,37 @@
         <!-- /Section Photo with text-->
 
         <!-- Section Grid photo-->
+        <section>
+            <div class="grid-photo small-container mg-b">
+                <div class="section-top"></div>
+                <div class="section-content flex">
+                    <div class="col">
+                        <div class="photo-card"></div>
+                        <div class="text-card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="photo-card"></div>
+                        <div class="text-card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="photo-card"></div>
+                        <div class="text-card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="photo-card"></div>
+                        <div class="text-card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="photo-card"></div>
+                        <div class="text-card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="photo-card"></div>
+                        <div class="text-card"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- /Section Grid photo-->
 
         <!-- Section Pubblicity -->
