Add section partner pubblicity

--- a/index.html
+++ b/index.html
@@ -145,8 +145,19 @@
         </section>
         <!-- /Section Grid photo-->
 
-        <!-- Section Pubblicity -->
-        <!-- /Section Pubblicity -->
+        <!-- Section Partner -->
+        <section>
+            <div class="section-partner">
+                <div class="section-top"></div>
+                <div class="section-main flex">
+                    <div class="photo-partner"></div>
+                    <div class="text-partner"></div>
+                    <div class="photo-partner"></div>
+                </div>
+                <div class="section-footer"></div>
+            </div>
+        </section>
+        <!-- /Section Partner -->
 
         <!-- Section Domande -->
         <!-- /Section Domande -->
