Add section questions

--- a/index.html
+++ b/index.html
@@ -160,6 +160,25 @@
         <!-- /Section Partner -->
 
         <!-- Section Domande -->
+        <section>
+            <div class="section-question small-container mg-t mg-b">
+                <div class="section-top"></div>
+                <div class="section-main">
+                    <div class="row-question flex">
+                        <div class="text"></div>
+                        <div class="icon"></div>
+                    </div>
+                    <div class="row-question flex">
+                        <div class="text"></div>
+                        <div class="icon"></div>
+                    </div>
+                    <div class="row-question flex">
+                        <div class="text"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- /Section Domande -->
     </main>
     <!-- /Main -->
