Add structure footer

--- a/index.html
+++ b/index.html
@@ -184,7 +184,18 @@
     <!-- /Main -->
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+        <div class="big-container">
+            <div class="footer-top flex">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <div class="footer-bottom"></div>
+        </div>
+    </footer>
     <!-- /Footer -->
     
 </body>
