Add position: fixed to Header

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
     <!-- Footer -->
     <footer>
         <div class="big-container">
+            <!-- Footer Top -->
             <div class="footer-top flex">
                 <div class="col"></div>
                 <div class="col"></div>
@@ -193,7 +194,11 @@
                 <div class="col"></div>
                 <div class="col"></div>
             </div>
+            <!-- /Footer Top -->
+
+            <!-- Footer Bottom -->
             <div class="footer-bottom"></div>
+            <!-- /Footer Bottom -->
         </div>
     </footer>
     <!-- /Footer -->
