Added details header top

--- a/index.html
+++ b/index.html
@@ -25,16 +25,31 @@
         <div class="header-top flex">
             <div class="header-left flex">
                 <!-- Logo Header -->
-                <nav class="header-logo"></nav>
+                <nav class="header-logo">
+                    <img src="img/logo-small.png" alt="Logo Dropbox">
+                </nav>
                 <!-- /Logo Header -->
 
                 <!-- Link Header -->
-                <nav class="header-link"></nav>
+                <nav class="header-link">
+                    <ul>
+                        <li><a href="">Perche Dropbox</a></li>
+                        <li><a href="">Funzioni</a></li>
+                        <li><a href="">Piani e Prezzi</a></li>
+                    </ul>
+                </nav>
                 <!-- /Link Header -->
             </div>
             <div class="header-right flex">
                 <!-- Link Header -->
-                <nav class="header-link"></nav>
+                <nav class="header-link">
+                    <ul>
+                        <li><a href="">Supporto</a></li>
+                        <li><a href="">Contatta l'ufficio vendite</a></li>
+                        <li><a href="">Accedi</a></li>
+                        <li><a class="btn" href="">Invia</a></li>
+                    </ul>
+                </nav>
                 <!-- /Link Header -->
             </div>
         </div>
