Added details jumbotron

--- a/index.html
+++ b/index.html
@@ -60,13 +60,22 @@
             <!-- Container Jumbotron-->
             <div class="jumbotron big-container">
                 <!-- Jumbo Top -->
-                <div class="jumbo-top"></div>
+                <div class="jumbo-top">
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                </div>
                 <!-- /Jumbo Top -->
 
                 <!-- Jumbo Bottom -->
                 <div class="jumbo-bottom flex">
-                    <div class="jumbo-text"></div>
-                    <div class="jumbo-photo"></div>
+                    <div class="jumbo-text">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
+                        <a href="" class="btn">Inizia la tua prova gratuita</a>
+                        <span>Annulla in qualsiasi momento</span>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <div class="jumbo-photo">
+                        <img src="img/jumbo.png" alt="Jumbo Photo">
+                    </div>
                 </div>
                 <!-- /Jumbo Bottom -->
             </div>
