Added details section-top of business-plan section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,17 @@
         <section>
             <div class="business-plan small-container mg-t mg-b">
                 <!-- Section Top -->
-                <div class="section-top"></div>
+                <div class="section-top">
+                    <h2>Trova il piano business che fa per te</h2>
+                    <div class="radio-btn">
+                        <input type="radio" name="abbonamento-mensile" id="subscription-month">
+                        <label for="subscription-month">Fatturazione mensile</label>
+                    </div>
+                    <div class="radio-btn">
+                        <input type="radio" name="abbonamento-annuale" id="subscription-year">
+                        <label for="subscription-year">Fatturazione annuale</label>
+                    </div>
+                </div>
                 <!-- /Section Top -->
 
                 <!-- Section Content -->
