Added details section-footer in business plan

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <h3>Professional</h3>
                                 <h4>$ 12.00</h4>
                                 <span class="month">/mese</span>
-                                <ul>
+                                <ul class="plan-list">
                                     <li>
                                         <i class="fa-solid fa-user"></i>
                                         <span>1 utente</span>
@@ -138,53 +138,7 @@
                         <div class="bottom-col">
                             <div class="big-container">
                                 <h4>Punti Salienti del piano</h4>
-                                <ul>
-                                    <li>
-                                        <i class="fa-solid fa-check"></i> 
-                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
-                                    </li>
-                                    <li><i class="fa-solid fa-check"></i> 
-                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /Column Of business Plan -->
-
-                    <!-- Column Of business Plan -->
-                    <div class="col">
-                        <div class="top-col">
-                            <div class="type-subscription">
-                                <i class="fa-solid fa-users"></i>
-                                <span>Team</span>
-                            </div>
-                            <div class="big-container">
-                                <h3>Advanced</h3>
-                                <h4>$ 18.00</h4>
-                                <span class="month">/mese</span>
-                                <ul>
-                                    <li>
-                                        <i class="fa-solid fa-user"></i>
-                                        <span>3 o più utenti</span>
-                                    </li>
-                                    <li>
-                                        <i class="fa-solid fa-folder"></i>
-                                        <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
-                                    </li>
-                                    <li>
-                                        <i class="fa-sharp fa-solid fa-share-nodes"></i>
-                                        <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tu team</span>
-                                    </li>
-                                </ul>
-                                <span class="btn">Prova gratis per 30 giorni</span>
-                                <span class="buy-link">oppure <a href="">acquista ora</a></span>
-                            </div>
-                        </div>
-                        <div class="bottom-col">
-                            <div class="big-container">
-                                <h4>Punti Salienti del piano</h4>
-                                <ul>
+                                <ul class="plan-list">
                                     <li>
                                         <i class="fa-solid fa-check"></i> 
                                         <span>Invia file fino a 100GB con Dropbox Transfert</span>
@@ -208,8 +162,8 @@
                             <div class="big-container">
                                 <h3>Professional</h3>
                                 <h4>$ 12.00</h4>
-                                <span>/mese</span>
-                                <ul>
+                                <span class="month">/mese</span>
+                                <ul class="plan-list">
                                     <li>
                                         <i class="fa-solid fa-user"></i>
                                         <span>1 utente</span>
@@ -230,7 +184,7 @@
                         <div class="bottom-col">
                             <div class="big-container">
                                 <h4>Punti Salienti del piano</h4>
-                                <ul>
+                                <ul class="plan-list">
                                     <li>
                                         <i class="fa-solid fa-check"></i> 
                                         <span>Invia file fino a 100GB con Dropbox Transfert</span>
@@ -244,12 +198,71 @@
                     </div>
                     <!-- /Column Of business Plan -->
 
-                    
+                    <!-- Column Of business Plan -->
+                    <div class="col">
+                        <div class="top-col">
+                            <div class="type-subscription">
+                                <i class="fa-solid fa-user"></i>
+                                <span>Singolo</span>
+                            </div>
+                            <div class="big-container">
+                                <h3>Professional</h3>
+                                <h4>$ 12.00</h4>
+                                <span class="month">/mese</span>
+                                <ul class="plan-list">
+                                    <li>
+                                        <i class="fa-solid fa-user"></i>
+                                        <span>1 utente</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder"></i>
+                                        <span>5 TB di spazio di archiviazione sicuro</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-sharp fa-solid fa-share-nodes"></i>
+                                        <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                    </li>
+                                </ul>
+                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="buy-link">oppure <a href="">acquista ora</a></span>
+                            </div>
+                        </div>
+                        <div class="bottom-col">
+                            <div class="big-container">
+                                <h4>Punti Salienti del piano</h4>
+                                <ul class="plan-list">
+                                    <li>
+                                        <i class="fa-solid fa-check"></i> 
+                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
+                                    </li>
+                                    <li><i class="fa-solid fa-check"></i> 
+                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /Column Of business Plan -->
                 </div>
                 <!-- /Section Content -->
 
                 <!-- Section Footer -->
-                <div class="section-footer"></div>
+                <div class="section-footer">
+                    <div class="type-subscription">
+                        <i class="fa-solid fa-user"></i>
+                        <span>Singolo</span>
+                    </div>
+                    <div class="container flex">
+                        <div class="text">
+                            <h2>Enterprise</h2>
+                            <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                        </div>
+                        <div class="button">
+                            <span class="btn">Contatta l'ufficio vendite</span>
+                        </div>
+                    </div>
+                </div>
                 <!-- /Section Footer -->
             </div>
         </section>
