Added details section with photo

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <i class="fa-solid fa-user"></i>
                         <span>Singolo</span>
                     </div>
-                    <div class="container flex">
+                    <div class="content flex">
                         <div class="text">
                             <h2>Enterprise</h2>
                             <h4>Contatta l'ufficio vendite per i prezzi</h4>
@@ -271,8 +271,14 @@
         <!-- Section Photo with text-->
         <section>
             <div class="section-photo small-container flex mg-b">
-                <div class="photo"></div>
-                <div class="text"></div>
+                <div class="photo">
+                    <img src="img/partner.png" alt="Photo partner">
+                </div>
+                <div class="text">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <span class="btn white">Trova un partner</span>
+                </div>
             </div>
         </section>
         <!-- /Section Photo with text-->
