Added details section grid photo

--- a/index.html
+++ b/index.html
@@ -286,32 +286,65 @@
         <!-- Section Grid photo-->
         <section>
             <div class="grid-photo small-container mg-b">
-                <div class="section-top"></div>
+                <div class="section-top">
+                    <h2>Esegui più operazioni con Dropbox Business</h2>
+                </div>
                 <div class="section-content flex">
                     <div class="col">
-                        <div class="photo-card"></div>
-                        <div class="text-card"></div>
+                        <div class="photo-card">
+                            <img src="img/business-feature-switching-tools.png" alt="Photo switching tools">
+                        </div>
+                        <div class="text-card">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis porro dicta consequatur quis temporibus ea aut laboriosam! Necessitatibus, aut, quos praesentium fugit</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="photo-card"></div>
-                        <div class="text-card"></div>
+                        <div class="photo-card">
+                            <img src="img/business-feature-send-files-it.png" alt="Photo send files">
+                        </div>
+                        <div class="text-card">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis porro dicta consequatur quis temporibus ea aut laboriosam! Necessitatibus, aut, quos praesentium fugit</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="photo-card"></div>
-                        <div class="text-card"></div>
+                        <div class="photo-card">
+                            <img src="img/business-feature-coordinate-it.png" alt="Photo coordinate">
+                        </div>
+                        <div class="text-card">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis porro dicta consequatur quis temporibus ea aut laboriosam! Necessitatibus, aut, quos praesentium fugit</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="photo-card"></div>
-                        <div class="text-card"></div>
+                        <div class="photo-card">
+                            <img src="img/business-feature-integrations-it.png" alt="Photo integrations">
+                        </div>
+                        <div class="text-card">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis porro dicta consequatur quis temporibus ea aut laboriosam! Necessitatibus, aut, quos praesentium fugit</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="photo-card"></div>
-                        <div class="text-card"></div>
+                        <div class="photo-card">
+                            <img src="img/business-feature-multi-device.png" alt="Photo multi device">
+                        </div>
+                        <div class="text-card">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis porro dicta consequatur quis temporibus ea aut laboriosam! Necessitatibus, aut, quos praesentium fugit</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="photo-card"></div>
-                        <div class="text-card"></div>
+                        <div class="photo-card">
+                            <img src="img/business-feature-security.png" alt="Photo security">
+                        </div>
+                        <div class="text-card">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis porro dicta consequatur quis temporibus ea aut laboriosam! Necessitatibus, aut, quos praesentium fugit</p>
+                        </div>
                     </div>
+                    
                 </div>
             </div>
         </section>
