Fixed section partners

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-footer">
+                <div class="section-footer flex">
                     <div class="small-container flex">
                         <div class="text">
                             <h2>Porta Dropbox Business nella tua azienda.</h2>
