Added details of section questions

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- /Header Top -->
 
         <!-- Header Bottom -->
-        <div class="header-bottom">
+        <div class="header-bottom mg-b">
             <!-- Container Jumbotron-->
             <div class="jumbotron big-container">
                 <!-- Jumbo Top -->
@@ -89,7 +89,7 @@
     <main>
         <!-- Section Piani business -->
         <section>
-            <div class="business-plan small-container mg-t mg-b">
+            <div class="business-plan small-container mg-b">
                 <!-- Section Top -->
                 <div class="section-top">
                     <h2>Trova il piano business che fa per te</h2>
@@ -352,7 +352,7 @@
 
         <!-- Section Partner -->
         <section>
-            <div class="section-partner">
+            <div class="section-partner mg-b">
                 <div class="section-top">
                     <div class="small-container">
                         <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
@@ -404,7 +404,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> 
                 <div class="section-footer flex">
                     <div class="small-container flex">
                         <div class="text">
@@ -421,20 +421,34 @@
 
         <!-- Section Domande -->
         <section>
-            <div class="section-question small-container mg-t mg-b">
-                <div class="section-top"></div>
+            <div class="section-question small-container mg-b">
+                <div class="section-top">
+                    <h2>Domande frequenti</h2>
+                </div>
                 <div class="section-main">
                     <div class="row-question flex">
-                        <div class="text"></div>
-                        <div class="icon"></div>
+                        <div class="text"> 
+                            <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span>
+                        </div>
+                        <div class="icon">
+                            <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                        </div>
                     </div>
                     <div class="row-question flex">
-                        <div class="text"></div>
-                        <div class="icon"></div>
+                        <div class="text"> 
+                            <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span>
+                        </div>
+                        <div class="icon">
+                            <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                        </div>
                     </div>
                     <div class="row-question flex">
-                        <div class="text"></div>
-                        <div class="icon"></div>
+                        <div class="text"> 
+                            <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span>
+                        </div>
+                        <div class="icon">
+                            <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                        </div>
                     </div>
                 </div>
             </div>
