--- a/index.html
+++ b/index.html
@@ -462,16 +462,67 @@
         <div class="big-container">
             <!-- Footer Top -->
             <div class="footer-top flex">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <h3>Dropbox</h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Prodotti</h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Azienda</h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Supporto</h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Community</h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
             </div>
             <!-- /Footer Top -->
 
             <!-- Footer Bottom -->
-            <div class="footer-bottom"></div>
+            <div class="footer-bottom">
+                <span id="icon-language">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    italiano 
+                    <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                </span>
+            </div>
             <!-- /Footer Bottom -->
         </div>
     </footer>
